--- a/style.css
+++ b/style.css
@@ -9,11 +9,38 @@ body {
 nav {
     color: aliceblue;
 }
+.p1{
+    margin: 18px 0px 0px 3px;
+    padding: 0px 14px 3px 37px;
+}
+
+.v1 {
+    margin: 18px 0px 0px 39px;
+    line-height:29px;
+
+}
+
+.v2 {
+    margin: 0px 0px 0px 153px;
+}
+
+.v3 {
+    margin: 0px 0px 0px 39px;
+    line-height: 38px;
+
+}
+
+.v4 {
+    margin: 0px 0px 0px 48px;
+}
+
+
 
 h1 {
     color: whitesmoke;
     font-size: 28px;
     text-transform: uppercase;
+    margin: 0px 0px 0px 42px;
 }
 
 #bol {
@@ -39,10 +66,12 @@ h1 {
 
 .bl {
     margin-left: 1%;
+    line-height: 45px;
+
 }
 
 .wait {
-    margin-left: 5%;
+    margin-left: 3%;
 }
 
 .wai {
@@ -52,14 +81,17 @@ h1 {
 #firsh1 {
     color: aliceblue;
     font-size: 20px;
+    padding: 4px 22px 7px 42px;
 }
 
 .par {
     margin-left: 165px;
+    line-height: 34px;
 }
 
 .skill {
     margin-left: 5%;
+    line-height: 34px;
 }
 
 
@@ -68,7 +100,7 @@ h1 {
 
 .form {
     color: yellow;
-    padding: 20px 0px 0px 60p
+    padding: 20px 0px 0px 60px;
 }
 
 input {
